# assignment-c

./: .gitignore  CMakeLists.txt
01_PartA Conditional Statements/: 00_temp.c  01_if.c  02_if.c  03_if.c  04_if.c  05_if.c  06_if.c  07_if.c  08_2switch-case.c  08_switch-case.c  10_Calculator-switch-case.c  11_triangle.c  12_temperature.c
01_if/: 01_if.c
02_PartB Loops/: 01_loop1-100.c  02_pf100-1.c  03_even1-100.c  04_Multiplication_table.c  05_sumOfN-terms.c  06_factorialOfaNumber.c
